2000-07-17  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (modules5-7, cvsadm-1e, emptydir-2): Allow for a nil
	commit (can happen if the test is run twice in a row).

2000-07-19  Pavel Roskin  <proski@gnu.org>
	and Larry Jones  <larry.jones@sdrc.com>

	* mkmodules.c (config_contents): Add a commented out example for
	LockDir. Don't suggest PreservePermissions unless it's enabled.

2000-07-17  Larry Jones  <larry.jones@sdrc.com>

	* login.c (get_cvs_password): Handle malformed ~/.cvspass more
	gracefully.

2000-07-12  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (modules5): New tests for module programs.

2000-07-11  Larry Jones  <larry.jones@sdrc.com>

	* filesubr.c (copy_file, xcmp): Handle systems (like Plan 9) that
	don't support mknod() and/or st_rdev.
	* import.c (add_rcs_file): Ditto.
	* rcs.c (RCS_checkout, RCS_checkin): Ditto.
	* update.c (special_file_mismatch): Ditto.

2000-07-10  Larry Jones  <larry.jones@sdrc.com>

	* zlib.c (gunzip_and_write): Fix type clashes.

	* main.c (main): Remove unused variables.

2000-07-10  Jim Meyering  <meyering@lucent.com>

	When a command like `cvs update -kk -jT1 -jT2' creates a new file
	(because it had the T2 tag, but not T1), the subsequent commit of
	that just-added file would effectively set the admin `-kk' option
	for that file in the repository.

	* update.c (join_file): Rename global-shadowing local `options'
	to `t_options'.
	Set file-scoped global `options' to NULL just before
	check-out.
	* sanity.sh (join-admin): New test for this.

2000-07-08  Larry Jones  <larry.jones@sdrc.com>

	* version.c, cvs.h (version): New function.
	* main.c (cmds[]): Add version command to invoke it.
	(main): Also use it in -v.
	* server.c (serve_version): New function.
	(requests[]): Add version command to invoke it.

2000-07-06  Karl Fogel  <kfogel@red-bean.com>

	* sanity.sh (pserver-14): remove this test for portability
	reasons (it was only recently added for the 2000-07-04 change).
